include/libqgraphicsitem.h

typedef struct QGraphicsEllipseItem QGraphicsEllipseItem;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsRectItem QGraphicsRectItem;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QRegion QRegion;
typedef struct QSize QSize;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QTransform QTransform;
typedef struct QVariant QVariant;
typedef struct QWidget QWidget;
typedef int Extension;          // C ABI enum
bool QGraphicsItem_IsObscured2(const QGraphicsItem* self, double x, double y, double w, double h);
QRegion* QGraphicsItem_BoundingRegion(const QGraphicsItem* self, QTransform* itemToDeviceTransform);
double QGraphicsItem_BoundingRegionGranularity(const QGraphicsItem* self);
void QGraphicsItem_SetBoundingRegionGranularity(QGraphicsItem* self, double granularity);
void QGraphicsItem_Update(QGraphicsItem* self);
void QGraphicsItem_Update2(QGraphicsItem* self, double x, double y, double width, double height);
void QGraphicsItem_Scroll(QGraphicsItem* self, double dx, double dy);
QPointF* QGraphicsItem_MapToItem(const QGraphicsItem* self, QGraphicsItem* item, QPointF* point);
QPointF* QGraphicsItem_MapToParent(const QGraphicsItem* self, QPointF* point);
QPointF* QGraphicsItem_MapToScene(const QGraphicsItem* self, QPointF* point);
QRectF* QGraphicsItem_MapRectToItem(const QGraphicsItem* self, QGraphicsItem* item, QRectF* rect);
QRectF* QGraphicsItem_MapRectToParent(const QGraphicsItem* self, QRectF* rect);
QRectF* QGraphicsItem_MapRectToScene(const QGraphicsItem* self, QRectF* rect);
QPainterPath* QGraphicsItem_MapToItem4(const QGraphicsItem* self, QGraphicsItem* item, QPainterPath* path);
QPainterPath* QGraphicsItem_MapToParentWithPath(const QGraphicsItem* self, QPainterPath* path);
QPainterPath* QGraphicsItem_MapToSceneWithPath(const QGraphicsItem* self, QPainterPath* path);
QPointF* QGraphicsItem_MapFromItem(const QGraphicsItem* self, QGraphicsItem* item, QPointF* point);
QPointF* QGraphicsItem_MapFromParent(const QGraphicsItem* self, QPointF* point);
QPointF* QGraphicsItem_MapFromScene(const QGraphicsItem* self, QPointF* point);
QRectF* QGraphicsItem_MapRectFromItem(const QGraphicsItem* self, QGraphicsItem* item, QRectF* rect);
QRectF* QGraphicsItem_MapRectFromParent(const QGraphicsItem* self, QRectF* rect);
QRectF* QGraphicsItem_MapRectFromScene(const QGraphicsItem* self, QRectF* rect);
QPainterPath* QGraphicsItem_MapFromItem4(const QGraphicsItem* self, QGraphicsItem* item, QPainterPath* path);
QPainterPath* QGraphicsItem_MapFromParentWithPath(const QGraphicsItem* self, QPainterPath* path);
QPainterPath* QGraphicsItem_MapFromSceneWithPath(const QGraphicsItem* self, QPainterPath* path);
QPointF* QGraphicsItem_MapToItem5(const QGraphicsItem* self, QGraphicsItem* item, double x, double y);
QPointF* QGraphicsItem_MapToParent2(const QGraphicsItem* self, double x, double y);
QPointF* QGraphicsItem_MapToScene2(const QGraphicsItem* self, double x, double y);
QRectF* QGraphicsItem_MapRectToItem2(const QGraphicsItem* self, QGraphicsItem* item, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectToParent2(const QGraphicsItem* self, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectToScene2(const QGraphicsItem* self, double x, double y, double w, double h);
QPointF* QGraphicsItem_MapFromItem5(const QGraphicsItem* self, QGraphicsItem* item, double x, double y);
QPointF* QGraphicsItem_MapFromParent2(const QGraphicsItem* self, double x, double y);
QPointF* QGraphicsItem_MapFromScene2(const QGraphicsItem* self, double x, double y);
QRectF* QGraphicsItem_MapRectFromItem2(const QGraphicsItem* self, QGraphicsItem* item, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectFromParent2(const QGraphicsItem* self, double x, double y, double w, double h);
QRectF* QGraphicsItem_MapRectFromScene2(const QGraphicsItem* self, double x, double y, double w, double h);
bool QGraphicsItem_IsAncestorOf(const QGraphicsItem* self, QGraphicsItem* child);
QGraphicsItem* QGraphicsItem_CommonAncestorItem(const QGraphicsItem* self, QGraphicsItem* other);
bool QGraphicsItem_IsUnderMouse(const QGraphicsItem* self);
QVariant* QGraphicsItem_Data(const QGraphicsItem* self, int key);
void QGraphicsItem_SetData(QGraphicsItem* self, int key, QVariant* value);
int QGraphicsItem_InputMethodHints(const QGraphicsItem* self);
void QGraphicsItem_SetInputMethodHints(QGraphicsItem* self, int hints);
void QGraphicsItem_InstallSceneEventFilter(QGraphicsItem* self, QGraphicsItem* filterItem);
void QGraphicsItem_RemoveSceneEventFilter(QGraphicsItem* self, QGraphicsItem* filterItem);
void QGraphicsItem_SetFlag2(QGraphicsItem* self, int flag, bool enabled);
void QGraphicsItem_SetCacheMode2(QGraphicsItem* self, int mode, QSize* cacheSize);
void QGraphicsItem_SetFocus1(QGraphicsItem* self, int focusReason);
void QGraphicsItem_EnsureVisible1(QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_EnsureVisible22(QGraphicsItem* self, QRectF* rect, int xmargin);
void QGraphicsItem_EnsureVisible3(QGraphicsItem* self, QRectF* rect, int xmargin, int ymargin);
void QGraphicsItem_EnsureVisible5(QGraphicsItem* self, double x, double y, double w, double h, int xmargin);
void QGraphicsItem_EnsureVisible6(QGraphicsItem* self, double x, double y, double w, double h, int xmargin, int ymargin);
QTransform* QGraphicsItem_ItemTransform2(const QGraphicsItem* self, QGraphicsItem* other, bool* ok);
void QGraphicsItem_SetTransform2(QGraphicsItem* self, QTransform* matrix, bool combine);
libqt_list /* of QGraphicsItem* */ QGraphicsItem_CollidingItems1(const QGraphicsItem* self, int mode);
bool QGraphicsItem_IsObscured1(const QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_Update1(QGraphicsItem* self, QRectF* rect);
void QGraphicsItem_Scroll3(QGraphicsItem* self, double dx, double dy, QRectF* rect);
QGraphicsRectItem* QGraphicsRectItem_new();
QGraphicsRectItem* QGraphicsRectItem_new2(QRectF* rect);
QGraphicsRectItem* QGraphicsRectItem_new3(double x, double y, double w, double h);
QGraphicsRectItem* QGraphicsRectItem_new4(QGraphicsItem* parent);
QGraphicsRectItem* QGraphicsRectItem_new5(QRectF* rect, QGraphicsItem* parent);
QGraphicsRectItem* QGraphicsRectItem_new6(double x, double y, double w, double h, QGraphicsItem* parent);
QRectF* QGraphicsRectItem_Rect(const QGraphicsRectItem* self);
void QGraphicsRectItem_SetRect(QGraphicsRectItem* self, QRectF* rect);
void QGraphicsRectItem_SetRect2(QGraphicsRectItem* self, double x, double y, double w, double h);
QRectF* QGraphicsRectItem_BoundingRect(const QGraphicsRectItem* self);
QPainterPath* QGraphicsRectItem_Shape(const QGraphicsRectItem* self);
bool QGraphicsRectItem_Contains(const QGraphicsRectItem* self, QPointF* point);
void QGraphicsRectItem_Paint(QGraphicsRectItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsRectItem_IsObscuredBy(const QGraphicsRectItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsRectItem_OpaqueArea(const QGraphicsRectItem* self);
int QGraphicsRectItem_Type(const QGraphicsRectItem* self);
bool QGraphicsRectItem_SupportsExtension(const QGraphicsRectItem* self, int extension);
void QGraphicsRectItem_SetExtension(QGraphicsRectItem* self, int extension, QVariant* variant);
QVariant* QGraphicsRectItem_Extension(const QGraphicsRectItem* self, QVariant* variant);
void QGraphicsRectItem_Delete(QGraphicsRectItem* self);
QGraphicsEllipseItem* QGraphicsEllipseItem_new();
QRectF* QGraphicsEllipseItem_Rect(const QGraphicsEllipseItem* self);
void QGraphicsEllipseItem_SetRect(QGraphicsEllipseItem* self, QRectF* rect);
void QGraphicsEllipseItem_SetRect2(QGraphicsEllipseItem* self, double x, double y, double w, double h);
int QGraphicsEllipseItem_StartAngle(const QGraphicsEllipseItem* self);
void QGraphicsEllipseItem_SetStartAngle(QGraphicsEllipseItem* self, int angle);
int QGraphicsEllipseItem_SpanAngle(const QGraphicsEllipseItem* self);
void QGraphicsEllipseItem_SetSpanAngle(QGraphicsEllipseItem* self, int angle);
QRectF* QGraphicsEllipseItem_BoundingRect(const QGraphicsEllipseItem* self);
QPainterPath* QGraphicsEllipseItem_Shape(const QGraphicsEllipseItem* self);
bool QGraphicsEllipseItem_Contains(const QGraphicsEllipseItem* self, QPointF* point);
void QGraphicsEllipseItem_Paint(QGraphicsEllipseItem* self, QPainter* painter, QStyleOptionGraphicsItem* option, QWidget* widget);
bool QGraphicsEllipseItem_IsObscuredBy(const QGraphicsEllipseItem* self, QGraphicsItem* item);
QPainterPath* QGraphicsEllipseItem_OpaqueArea(const QGraphicsEllipseItem* self);
int QGraphicsEllipseItem_Type(const QGraphicsEllipseItem* self);
bool QGraphicsEllipseItem_SupportsExtension(const QGraphicsEllipseItem* self, int extension);
void QGraphicsEllipseItem_SetExtension(QGraphicsEllipseItem* self, int extension, QVariant* variant);
QVariant* QGraphicsEllipseItem_Extension(const QGraphicsEllipseItem* self, QVariant* variant);
void QGraphicsEllipseItem_Delete(QGraphicsEllipseItem* self);